--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.heyhemant.demo_stock">
    <application
-        android:label="demo_stock"
+        android:label="Easy Trading"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
