--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,24 +27,21 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
-  flutter_expanded_tile: ^0.2.1
   google_fonts: 1.1.2
-  get:
   syncfusion_flutter_charts: 18.4.33
-  flutter_candlesticks: ^0.1.4
-  candlesticks: ^0.4.0
-  flutter_svg: ^0.19.0
   time: ^2.0.0
   intl: ^0.16.1
   dio: ^3.0.0
   firebase: ^8.0.0
   firebase_auth: ^0.14.0+9
   cloud_firestore: 0.12.0
-  flutter_signin_button: ^2.0.0
   firebase_core: ^0.4.0+5
   google_sign_in: ^4.5.9
   curved_navigation_bar: ^0.3.3
-  flutter_snake_navigationbar: ^0.5.0
+  slimy_card: ^1.0.4
+  slide_to_confirm: ^0.0.7
+
+
 
 dev_dependencies:
   json_to_model: 1.4.0
