--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,8 +40,9 @@ dependencies:
   curved_navigation_bar: ^0.3.3
   slimy_card: ^1.0.4
   slide_to_confirm: ^0.0.7
-
-
+  connectivity: ^3.0.6
+  image_picker: ^0.6.5+3
+  firebase_storage: ^3.1.6
 
 dev_dependencies:
   json_to_model: 1.4.0
